# mandelbrot

./: .gitconfig  .travis.yml  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.hpp
include/mandelbrot_gui/: coord_sys.hpp  elem.hpp  layers.hpp
src/: CMakeLists.txt  common.hpp  text.cpp  text.hpp
src/gui/: coordsys.cpp
src/mandelbrot_gui/: CMakeLists.txt  coord_sys.cpp  elem.cpp  layers.cpp
test/: CMakeLists.txt  mandelbrot_test.cpp  mandelbrottest.cpp
test/gui/: test_coordsys.cpp
test/mandelbrot_gui_lib/: test_coord_sys.cpp  test_layers.cpp
